--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
+    "expo-server-sdk": "^3.15.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "jsonwebtoken": "^9.0.2",
