--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "expo-server-sdk": "^3.15.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "googleapis": "^155.0.1",
     "jsonwebtoken": "^9.0.2",
+    "node-apple-receipt-verify": "^1.15.0",
     "nodemon": "^3.1.10",
     "openai": "^5.8.2",
     "solapi": "^5.4.0"
