구직자 프로필 이미지 업로드 기능 추가

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-apple-receipt-verify": "^1.15.0",
     "nodemon": "^3.1.10",
     "openai": "^5.8.2",
-    "solapi": "^5.4.0"
+    "solapi": "^5.4.0",
+    "uuid": "^11.1.0"
   }
 }
