--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@google-cloud/translate": "^9.1.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@supabase/supabase-js": "^2.50.3",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "node-apple-receipt-verify": "^1.15.0",
     "nodemon": "^3.1.10",
     "openai": "^5.8.2",
+    "redis": "^5.8.2",
     "sharp": "^0.34.3",
     "solapi": "^5.4.0",
     "uuid": "^11.1.0"
