--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google-cloud/translate": "^9.1.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@supabase/supabase-js": "^2.50.3",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
@@ -24,6 +25,8 @@
     "express-rate-limit": "^7.5.1",
     "googleapis": "^155.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "multer-s3": "^2.10.0",
     "node-apple-receipt-verify": "^1.15.0",
     "nodemon": "^3.1.10",
     "openai": "^5.8.2",
